Fix issue on show page where images were stretching to the size of the screen

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -24,13 +24,10 @@
   box-shadow: 5px 5px 3px rgba(1,1,1,0.25);
 }
 
-img{
-  width: 100%;
-  height: 100%;
-}
-
 .image {
   object-fit: scale-down;
+  width: 100%;
+  height: 100%;
 }
 
 .new-image-form
